<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/background_fragment"
    android:orientation="vertical">
    
	
    <TextView
        android:id="@+id/incoming_text_title"
      	style="@style/DialogTitle"
        android:text="@string/incoming_text"/>
    
	<RelativeLayout
	    android:id="@+id/text_rl_on_length"
	    style="@style/CustomRelativeLayoutSetting"
	    android:background="@null" >
	
	    <TextView
	        android:id="@+id/text_txt_on_length"
	        style="@style/CustomTextViewSetting"
	        android:text="@string/on_length" />
	
	    <TextView
	        android:id="@+id/text_on_length_ms"
	        style="@style/CustomTextViewSetting_Change_Display"
	        android:text="50ms" />
	
	</RelativeLayout>
	
	<SeekBar
	    android:id="@+id/text_seekbar_on_length"
	    style="@style/CustomSeekbarSetting" 
	    android:max="1450"/>
	
	<RelativeLayout
	    android:id="@+id/text_rl_off_length"
	    style="@style/CustomRelativeLayoutSetting"
	    android:background="@null" >
	
	    <TextView
	        android:id="@+id/text_txt_off_length"
	        style="@style/CustomTextViewSetting"
	        android:text="@string/off_length" />
	
	    <TextView
	        android:id="@+id/text_off_length_ms"
	        style="@style/CustomTextViewSetting_Change_Display"
	        android:text="50ms" />
	
	</RelativeLayout>
	
	<SeekBar
	    android:id="@+id/text_seekbar_off_length"
	    style="@style/CustomSeekbarSetting" 
	    android:max="1450"/>
	
	<RelativeLayout
	    android:id="@+id/text_rl_flash_time"
	    style="@style/CustomRelativeLayoutSetting"
	    android:background="@null" >
	
	    <TextView
	        android:id="@+id/text_txt_flash_time"
	        style="@style/CustomTextViewSetting"
	        android:text="@string/flash_times" />
	
	    <TextView
	        android:id="@+id/text_flash_time"
	        style="@style/CustomTextViewSetting_Change_Display"
	        android:text="3 Time(s)" />
	
	</RelativeLayout>
	
	<SeekBar
	    android:id="@+id/text_seekbar_flash_time"
	    style="@style/CustomSeekbarSetting"
	    android:max="9"
	    android:progress="3" />
	
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/txtTest"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="17dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/test_on"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtOk"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/txtOk"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>