<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground" >

    <ScrollView
        android:id="@+id/scroll_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_status"
                style="@style/CustomTitleSetting"
                android:text="@string/enable_for" />

            <RelativeLayout
                android:id="@+id/rl_incoming_call"
                style="@style/CustomRelativeLayoutSetting" >

                <ImageView
                    android:id="@+id/icon_incoming_call"
                    style="@style/CustomImageViewSetting"
                    android:background="@drawable/ic_phone_in_talk_white_36dp" />

                <TextView
                    android:id="@+id/txt_incoming_call"
                    style="@style/CustomTextViewSetting"
                    android:layout_toRightOf="@+id/icon_incoming_call"
                    android:text="@string/incoming_call" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_incoming_call"
                    style="@style/CustomSwitchSetting" />
            </RelativeLayout>
            
            <View 
		        style="@style/CustomViewDivider" />

            <RelativeLayout
                android:id="@+id/rl_incoming_sms"
                style="@style/CustomRelativeLayoutSetting" >

                <ImageView
                    android:id="@+id/icon_incoming_sms"
                    style="@style/CustomImageViewSetting"
                    android:background="@drawable/ic_forum_white_36dp" />

                <TextView
                    android:id="@+id/txt_incoming_sms"
                    style="@style/CustomTextViewSetting"
                    android:layout_toRightOf="@+id/icon_incoming_sms"
                    android:text="@string/incoming_text" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_incoming_sms"
                    style="@style/CustomSwitchSetting" />
            </RelativeLayout>
            

            <TextView
                android:id="@+id/tv_enable_for"
                style="@style/CustomTitleSetting"
                android:text="@string/enable_in" />

            <RelativeLayout
                android:id="@+id/rl_normal_mode"
                style="@style/CustomRelativeLayoutSetting" >

                <ImageView
                    android:id="@+id/icon_normal_mode"
                    style="@style/CustomImageViewSetting"
                    android:background="@drawable/ic_volume_up_white_36dp" />

                <TextView
                    android:id="@+id/txt_normal_mode"
                    style="@style/CustomTextViewSetting"
                    android:layout_toRightOf="@+id/icon_normal_mode"
                    android:text="@string/normal_mode" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_normal_mode"
                    style="@style/CustomSwitchSetting" />
            </RelativeLayout>
            
            <View 
		        style="@style/CustomViewDivider" />

            <RelativeLayout
                android:id="@+id/rl_vibrate_mode"
                style="@style/CustomRelativeLayoutSetting" >

                <ImageView
                    android:id="@+id/icon_vibrate_mode"
                    style="@style/CustomImageViewSetting"
                    android:background="@drawable/ic_vibration_white_36dp" />

                <TextView
                    android:id="@+id/txt_vibrate_mode"
                    style="@style/CustomTextViewSetting"
                    android:layout_toRightOf="@+id/icon_vibrate_mode"
                    android:text="@string/vibrate_mode" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_vibrate_mode"
                    style="@style/CustomSwitchSetting" />
            </RelativeLayout>
            
            <View 
		        style="@style/CustomViewDivider" />

            <RelativeLayout
                android:id="@+id/rl_silent_mode"
                style="@style/CustomRelativeLayoutSetting" >

                <ImageView
                    android:id="@+id/icon_silent_mode"
                    style="@style/CustomImageViewSetting"
                    android:background="@drawable/ic_volume_off_white_36dp" />

                <TextView
                    android:id="@+id/txt_silent_mode"
                    style="@style/CustomTextViewSetting"
                    android:layout_toRightOf="@+id/icon_silent_mode"
                    android:text="@string/silent_mode" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_silent_mode"
                    style="@style/CustomSwitchSetting" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <!--<com.google.android.gms.ads.AdView
        android:id="@+id/bottom_ad_banner_setting_basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/bottom_ad_banner_setting_adv_frag">
    </com.google.android.gms.ads.AdView>-->

</RelativeLayout>